[package]
name = "block_explorer_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "=0.19.0"
bitcoincore-rpc-json = "0.19.0"
neo4rs = "0.8.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }